# MOVA

./: .gitignore  README.md  args.py  main_bind.py  media.py  pyproject.toml  template.env
api/: app.py
assets/: assets.txt
src/MOVA/: args.py  main_bind.py  media.py
src/MOVA/image_bind/models/: imagebind_model.py
