[project]
name = "mova"
version = "0.1.0"
description = "Generate Music Videos with BindDiffusion"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "albumentations==0.4.3",
    "decord>=0.6.0",
    "ftfy>=6.3.1",
    "fvcore>=0.1.5.post20221221",
    "imageio-ffmpeg==0.4.2",
    "imageio==2.36.1",
    "opencv-python>=4.10.0.84",
    "pudb>=2024.1.3",
    "pytorchvideo>=0.1.5",
    "regex>=2024.11.6",
    "timm==0.6.7",
    "torch==1.13",
    "torchaudio==0.13.0",
    "torchvision==0.14.0",
    "pytorch-lightning==1.4.2",
    "torchmetrics>=0.6",
    "omegaconf==2.1.1",
    "test-tube>=0.7.5",
    "streamlit>=1.41.1",
    "einops==0.3.0",
    "transformers==4.19.2",
    "webdataset==0.2.5",
    "open-clip-torch==2.7.0",
    "gradio==3.13.2",
    "kornia==0.6",
    "streamlit-drawable-canvas==0.8.0",
    "bs4>=0.0.2",
    "numpy==1.26.0",
    "uvicorn>=0.34.0",
    "fastapi>=0.115.6",
    "redis>=5.2.1",
    "moviepy==1.0.3",
    "ffmpeg>=1.4",
]
